--- a/local/modules/up.bookrix/install/js/up/bookrix-app/src/page-blocks/css/Book-Filters.css
+++ b/local/modules/up.bookrix/install/js/up/bookrix-app/src/page-blocks/css/Book-Filters.css
@@ -44,5 +44,6 @@
 .bookrix-filter-pages {
 	display: flex;
 	flex-direction: row;
-	justify-content: space-around;
+	align-items: center;
+	justify-content: space-between;
 }
