--- a/local/modules/up.bookrix/install/js/up/bookrix-app/src/page-blocks/css/Book-Filters.css
+++ b/local/modules/up.bookrix/install/js/up/bookrix-app/src/page-blocks/css/Book-Filters.css
@@ -39,6 +39,21 @@
 	display: flex;
 	flex-direction: row;
 	margin: 5px;
+	height: 20px;
+	padding: 5px;
+	cursor: pointer;
+	border-radius: 10px;
+	transition: .3s ease;
+}
+
+.bookrix-filter-author:hover {
+	box-shadow: 2px 2px 2px rgba(0,0,0,.3);
+}
+
+.bookrix-filter-author-selected {
+	border: 1px solid #333;
+	border-radius: 10px;
+	box-shadow: 2px 2px 2px rgba(0,0,0,.3);
 }
 
 .bookrix-filter-pages {
