--- a/local/modules/up.bookrix/install/js/up/bookrix-app/src/page-blocks/css/Book.css
+++ b/local/modules/up.bookrix/install/js/up/bookrix-app/src/page-blocks/css/Book.css
@@ -7,10 +7,12 @@
 	padding: 30px;
 	border-radius: 20px;
 	box-shadow: 5px 5px 5px rgba(0,0,0,.3);
-	width: 100%;
 }
 
 .book-item-title {
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
 	font-size: 32px;
 	font-weight: bold;
 	margin-bottom: 10px;
