--- a/local/modules/up.bookrix/install/js/up/bookrix-app/src/page-blocks/css/Book.css
+++ b/local/modules/up.bookrix/install/js/up/bookrix-app/src/page-blocks/css/Book.css
@@ -9,6 +9,10 @@
 	box-shadow: 5px 5px 5px rgba(0,0,0,.3);
 }
 
+.book-item-selected {
+	background-color: #eaf9ff;
+}
+
 .book-item-title {
 	display: flex;
 	justify-content: space-between;
